Bugfix: overlapping shifts
-fixed a bug showing overlapping shifts

--- a/aspnet-core/src/pogoshift.Web.Mvc/wwwroot/css/calendar.css
+++ b/aspnet-core/src/pogoshift.Web.Mvc/wwwroot/css/calendar.css
@@ -542,6 +542,146 @@
     bottom: calc((36px + 6px) * 10);
 }
 
+.scheduling-calendar .associate-11 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 11);
+}
+
+.scheduling-calendar .associate-12 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 12);
+}
+
+.scheduling-calendar .associate-13 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 13);
+}
+
+.scheduling-calendar .associate-14 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 14);
+}
+
+.scheduling-calendar .associate-15 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 15);
+}
+
+.scheduling-calendar .associate-16 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 16);
+}
+
+.scheduling-calendar .associate-17 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 17);
+}
+
+.scheduling-calendar .associate-18 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 18);
+}
+
+.scheduling-calendar .associate-19 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 19);
+}
+
+.scheduling-calendar .associate-20 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 20);
+}
+
+.scheduling-calendar .associate-21 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 21);
+}
+
+.scheduling-calendar .associate-22 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 22);
+}
+
+.scheduling-calendar .associate-23 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 23);
+}
+
+.scheduling-calendar .associate-24 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 24);
+}
+
+.scheduling-calendar .associate-25 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 25);
+}
+
+.scheduling-calendar .associate-26 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 26);
+}
+
+.scheduling-calendar .associate-27 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 27);
+}
+
+.scheduling-calendar .associate-28 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 28);
+}
+
+.scheduling-calendar .associate-29 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 29);
+}
+
+.scheduling-calendar .associate-30 {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: calc((36px + 6px) * 30);
+}
+
 .scheduling-calendar .time-period-copy,
 .scheduling-calendar .time-period-delete {
     width: 1em;
